# Work_Flow_Pro

./: README.md
UI-Design/Maintenance-UI/: Maintenance-UI.py  Maintenance-UI.ui
UI-Design/Management-UI/: CMakeLists.txt  Management-UI.py  Management-UI.ui  interface.ui  main.py  mainwindow.ui
UI-Design/Schedular-UI/: Schedular.py  Schedular.ui
UI-Design/combined/: Logistics-UI.py  Logistics-UI.ui  Maintenance-UI.py  Maintenance-UI.ui  Management-UI.py  Management-UI.ui  createaccount.ui  database_utilites.py  login.py  login.ui  login_utilities.py  utilities.py
UI-Design/encryption/: encrypt_file.py
UI-Design/load-sql/: sql-connect-test.py  table.py  table.ui
UI-Design/login/: client.py  createaccount.ui  database_utilities.py  login-switcher.py  login.py  login.ui  login2.py  merged-login.py  server.py  updatePasswords.py  utilities.py
UI-Design/temp/: test-script.py
database/: Dump20240316.sql  WorkFlowPro-BACKUP-2023-06-27 (1).sql  WorkFlowPro-BACKUP-2023-08-15_(1814).sql  WorkFlowPro-June-06-2023.mwb  WorkFlowPro-June-06-2023.mwb.bak  WorkFlowPro.mwb  WorkFlowPro_add_to_db_script.sql  WorkFlowPro_creation_script.sql  WorkFlowPro_sample_data.sql
documentation/: SDEV-435-81_Sherwood_ProjectDocumentation.docx
documentation/Install/: Fresh-install-instructions.txt  libraries-install.txt  libraries.txt  python-install.txt  requirements-Kubuntu.txt  requirements-Ubuntu.txt  requirements.docx
notes/: Advanced-system-notes.docx  DB-requirement-list.txt  FlowChart-Symbol.dia  FlowChart-Symbol.dia.autosave  Software Design and Implementation.xlsx  charts.xlsx
notes/requirement-notes/: DB-design-update.db  core-requirements.txt  general-outline.txt  requirements.txt  system-design-parts.txt  tools.txt
